Deprecations (finalize and new Integer(int))